--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "name": "game-icons-tool",
   "version": "1.0.0",
   "description": "A CLI tool to create icons svg, css and others like dart icons class from game-icons.net",
-  "main": "index.js",
   "type": "module",
   "author": "Danilo Lutz <danilolutz@protonmail.com>",
   "license": "MIT",
+  "main": "dist/index.js",
+  "bin": {
+    "gameicons": "./dist/index.js"
+  },
+  "scripts": {
+    "gameicons": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/index.ts",
+    "build": "rm -rf dist && tsc"
+  },
   "dependencies": {
     "adm-zip": "^0.5.16",
     "axios": "^1.7.9",
@@ -18,10 +25,6 @@
     "inquirer": "^12.1.0",
     "svg2ttf": "^6.0.3",
     "svgicons2svgfont": "^15.0.0"
-  },
-  "scripts": {
-    "gameicons": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/index.ts",
-    "build": "tsc"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.5.7",
@@ -37,8 +40,5 @@
     "require": [
       "ts-node/register"
     ]
-  },
-  "bin": {
-    "gameicons": "./dist/index.js"
   }
 }
