--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,6 +44,7 @@ jobs:
       - name: Create GitHub release
         uses: actions/create-release@v1
         with:
+          token: ${{ secrets.GH_TOKEN }}
           tag_name: ${{ github.ref_name }}
           release_name: "Release ${{ github.ref_name }}"
           body: ${{ steps.changelog.outputs.content }}
