--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,9 +12,9 @@
       ],
       "args": [
         "${workspaceFolder}/src/index.ts",
-        "generate",
-        "dart",
-        "downloads downloads/web"
+        // "generate",
+        // "dart",
+        // "downloads downloads/web"
       ],
       "cwd": "${workspaceFolder}",
       "sourceMaps": true,
